kubernetes/grafana/ingress.yaml
# Copyright (c) 2024 Bima Kharisma Wicaksana
# Grafana Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "grafana-ip"
    networking.gke.io/managed-certificates: "grafana-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "grafana-frontend-config"
spec:
  rules:
    - host: grafana.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
